fix layout issues in IE11

--- a/confirmation.scss
+++ b/confirmation.scss
@@ -80,10 +80,10 @@
   }
 
   &__img {
-    flex-basis: 35%;
+    flex-basis: 30%;
 
     @media only screen and (min-width: $breakpoint-tablet) {
-      flex-basis: 21%;
+      flex-basis: 20%;
     }
 
     img {
@@ -93,11 +93,11 @@
   }
 
   &__info {
-    flex-basis: 65%;
+    flex-basis: 60%;
     padding-left: 1rem;
 
     @media only screen and (min-width: $breakpoint-tablet) {
-      flex-basis: 79%;
+      flex-basis: 75%;
     }
   }
 }
