--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -33,6 +33,7 @@
 
 .checkbox {
   display: flex;
+  align-items: flex-start;
   line-height: 1.35;
 
   &__input {
